--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
+sudo: false
 language: node_js
 node_js:
   - "7"
 before_install:
-- ssh-keygen -q -N "" -f ~/.ssh/google_compute_engine
-- openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
-  -in scs-shadow-e5e41dfcb0f6.json.enc -out scs-shadow-e5e41dfcb0f6.json -d
+  - openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
+    -in scs-shadow-e5e41dfcb0f6.json.enc -out scs-shadow-e5e41dfcb0f6.json -d
 deploy:
   provider: gae
   keyfile: scs-shadow-e5e41dfcb0f6.json
