--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: node_js
 node_js:
-  - "7"
+- '7'
 before_install:
-  - openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
-    -in scs-shadow-e5e41dfcb0f6.json.enc -out scs-shadow-e5e41dfcb0f6.json -d
-before_deploy:
-  - openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
-    -in scs-shadow-e5e41dfcb0f6.json.enc -out scs-shadow-e5e41dfcb0f6.json -d
+- openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
+  -in travis-key.json.enc -out travis-key.json -d
 deploy:
   provider: gae
-  keyfile: scs-shadow-e5e41dfcb0f6.json
+  keyfile: travis-key.json
   project: scs-api
   default: false
   skip_cleanup: true
