updated travis credentials

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ node_js:
 - '7'
 before_install:
 - openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
-  -in travis-key.json.enc -out travis-key.json -d
+  -in travis-cred.json.enc -out travis-cred.json -d
 deploy:
   provider: gae
-  keyfile: travis-key.json
+  keyfile: travis-cred.json
   project: scs-api
   default: false
   skip_cleanup: true
