--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - if [ ! -d $HOME/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash;
   fi
 - gcloud auth activate-service-account --key-file gce-key.json
-- sed 's/db_connect/'$DB_CONNECT'/;s/prismic/'$PRISMIC'/' app.yaml.tmp > app.yaml
+- sed "s/db_connect/$DB_CONNECT/;s/prismic/$PRISMIC/" app.yaml.tmp > app.yaml
 install:
 - gcloud config set compute/zone us-east1-b
 - gcloud config set project scs-shadow
