--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
 - if [ ! -d $HOME/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash;
   fi
 - gcloud auth activate-service-account --key-file gce-key.json
-- sudo echo "  DB_CONNECT: "$DB >> app.yaml
-- sudo echo "  PRISMIC: "$PRISMIC >> app.yaml
+- echo "  DB_CONNECT:" $DB >> app.yaml
+- echo "  PRISMIC:" $PRISMIC >> app.yaml
 install:
 - gcloud config set compute/zone us-east1-b
 - gcloud config set project scs-shadow
