--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": "7.7.1"
   },
+  "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec npm start",
     "start": "node server.js",
@@ -18,12 +19,12 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
-    "graphql": "^0.10.1",
-    "graphql-server-express": "^0.8.0",
-    "graphql-tag": "^2.2.2",
+    "graphql": "^0.10.3",
+    "graphql-server-express": "^1.0.0",
+    "graphql-tag": "^2.4.2",
     "helmet": "^3.6.1",
-    "mongoose": "^4.10.5",
-    "prismic.io": "^3.5.6"
+    "mongoose": "4.10.8",
+    "prismic.io": "^3.5.7"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
