--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "nodemon --exec npm start",
     "start": "node server.js",
-    "test": "echo \"no tests for today.\" && exit 0"
+    "test": "mocha"
   },
   "dependencies": {
     "compression": "^1.6.2",
