--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "nodemon --exec npm start",
     "start": "node server.js",
-    "test": "mocha"
+    "test": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "dependencies": {
     "compression": "^1.6.2",
@@ -27,6 +27,12 @@
     "prismic.io": "^3.5.7"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-cli": "6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "webpack": "2.6.1"
   }
 }
