--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "scs-api",
   "description": "CMU:SCS GraphQL API",
   "author": "seckel@scs.cmu.edu",
-  "version": "1.0.0",
+  "contributors": [
+      {
+          "author": "Ryan Bungard",
+          "email": "ryanbungard@cmu.edu"
+      }
+  ],
+  "version": "1.0.1",
   "repository": "https://github.com/SchoolofComputerScience/scs-api",
   "engines": {
     "node": "7.7.1"
   },
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec npm start",
-    "start": "node server.js",
+    "build": "npm run clean && babel src -d dist",
+    "clean": "rm -rf dist && mkdir dist",
+    "dev": "nodemon src/server.js --exec babel-node",
+    "start": "npm run build && node dist/server.js",
     "test": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "dependencies": {
@@ -27,12 +35,10 @@
     "prismic.io": "^3.5.7"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
-    "webpack": "2.6.1"
+    "nodemon": "^1.11.0"
   }
 }
