--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - if [ ! -d $HOME/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash;
   fi
 - gcloud auth activate-service-account --key-file gce-key.json
-- echo "  DB_CONNECT:" $DB_NEW >> app.yaml
+- echo "  DB_CONNECT:" $DB_PROD >> app.yaml
 - echo "  PRISMIC:" $PRISMIC >> app.yaml
 install:
 - gcloud config set compute/zone us-east1-b
