upated travis / build process

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_install:
 - gcloud auth activate-service-account --key-file gce-key.json
 - echo "  PRISMIC:" $PRISMIC >> app.yaml
 - echo "  DB_CONNECT:" $ATLAS >> app.yaml
+- npm install
+- npm run build
 install:
 - gcloud config set compute/zone us-east1-b
 - gcloud config set project scs-shadow
