--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "description": "CMU:SCS GraphQL API",
   "author": "seckel@scs.cmu.edu",
   "contributors": [
-      {
-          "author": "Ryan Bungard",
-          "email": "ryanbungard@cmu.edu"
-      }
+    {
+      "author": "Ryan Bungard",
+      "email": "ryanbungard@cmu.edu"
+    }
   ],
-  "version": "1.0.1",
+  "version": "2.0.0",
   "repository": "https://github.com/SchoolofComputerScience/scs-api",
   "engines": {
-    "node": "7.7.1"
+    "node": "8.2.1",
+    "npm": ">=5.0"
   },
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && babel src -d dist",
     "clean": "rm -rf dist && mkdir dist",
     "dev": "nodemon src/server.js --exec babel-node",
-    "start": "npm run build && node dist/server.js",
+    "start": "node dist/server.js",
     "test": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "graphql": "^0.10.3",
     "graphql-server-express": "^1.0.0",
     "graphql-tag": "^2.4.2",
+    "graphql-tools": "^1.1.0",
     "helmet": "^3.6.1",
     "mongoose": "4.10.8",
     "prismic.io": "^3.5.7"
