--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ filter_secrets: false
 branches:
   only:
   - master
+  - stage
 before_install:
 - openssl aes-256-cbc -K $encrypted_d88b7c395367_key -iv $encrypted_d88b7c395367_iv
   -in gce-key.json.enc -out gce-key.json -d
