--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "graphql-tag": "^2.4.2",
     "helmet": "^3.6.1",
     "mongoose": "4.11.4",
-    "prismic.io": "^3.5.7"
+    "mysql2": "^1.5.2",
+    "prismic.io": "^3.5.7",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
