--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql-server-express": "^1.0.0",
     "graphql-tag": "^2.4.2",
     "helmet": "^3.6.1",
+    "moment": "^2.24.0",
     "mongoose": "4.11.4",
     "mysql2": "^1.5.2",
     "prismic.io": "^3.5.7",
